# ising_benchmark

./: .gitignore  Brewfile  CMakeLists.txt  Cargo.toml  Jamroot.jam  Metropolis.ipynb  Metropolis.jl  Project.toml  README.adoc  Taskfile.yml  do_sim.jl  do_sim.py  dodo.py  meson.build  metropolis.jl  run_sim.py  setup.jl  setup.py  simulate.pyx
cpp/: .gitignore  Taskfile.yml  benchmark.py
cpp/src/: Lattice.h  ising.cpp
csharp/: Ising.csproj  Ising.sln  IsingProgram.cs  Program.cs
csharp/src/: Lattice.cs
cython/: MetropolisAnalysis.ipynb  benchmark.py  build.py  do_sim.py  pyproject.toml  setup.py
cython/ising/: lattice.pxd  lattice.pyx  simulate.pyx  simulation.pyx
ising/: lattice.py  random.py  random_build.py  run.py  simulation.py
julia/: .gitignore  Manifest.toml  Project.toml  Taskfile.yml  benchmark.jl  benchmark.py  data.csv  do_sim.jl
julia/src/: Ising.jl  Metropolis.jl  Queue.jl  Runner.jl
numba/: Taskfile.yml  benchmark.py  pyproject.toml  run_sim.py
numba/ising/: fifo.py  lattice.py  simulation.py
pypy/: Taskfile.yml  benchmark.py  pyproject.toml  run_sim.py
pypy/ising/: fifo.py
rust/: .gitignore  Cargo.toml  Taskfile.yml  benchmark.py  data.csv
rust/src/: main.rs  system.rs
scripts/: benchmark.sh
src/: Channel.h  Lattice.cpp  Lattice.h  Metropolis.jl  Runner.jl  ising.cpp  ising.h  main.rs  system.rs
