[tool.poetry]
name = "ising"
version = "0.1.0"
description = ""
build = "build.py"
authors = ["Zach Raines <raineszm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
Cython = "^0.29.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "Cython", "numpy"]
build-backend = "poetry.masonry.api"
