[tool.poetry]
name = "ising"
version = "0.1.0"
description = ""
authors = ["Zach Raines <raineszm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numba = "^0.44.1"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
