[tool.poetry]
name = "ising"
version = "0.1.0"
description = ""
authors = ["Zach Raines <raineszm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numba = "^0.59"
numpy = "^1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
